Lib/AlternateWrapper/NaroOccCore/NaroOccCore/Occ/AIS/AISInteractiveContext.h

extern "C" DECL_EXPORT void AIS_InteractiveContext_DisplayedObjectsFB1E3476(
	void* instance,
	void* aListOfIO,
	bool OnlyFromNeutral);
extern "C" DECL_EXPORT void AIS_InteractiveContext_DisplayedObjects552A363C(
	void* instance,
	int WhichKind,
	int WhichSignature,
	void* aListOfIO,
	bool OnlyFromNeutral);
extern "C" DECL_EXPORT void AIS_InteractiveContext_ObjectsInCollector235DE22E(
	void* instance,
	void* aListOfIO);
extern "C" DECL_EXPORT void AIS_InteractiveContext_ObjectsInCollectorFB8692A(
	void* instance,
	int WhichKind,
	int WhichSignature,
	void* aListOfIO);
extern "C" DECL_EXPORT void AIS_InteractiveContext_ErasedObjects235DE22E(
	void* instance,
	void* theListOfIO);
extern "C" DECL_EXPORT void AIS_InteractiveContext_ErasedObjectsFB8692A(
	void* instance,
	int WhichKind,
	int WhichSignature,
	void* theListOfIO);
extern "C" DECL_EXPORT void AIS_InteractiveContext_ObjectsByDisplayStatusF86BDF5C(
	void* instance,
	int theStatus,
	void* theListOfIO);
extern "C" DECL_EXPORT void AIS_InteractiveContext_ObjectsByDisplayStatusB048A7AD(
	void* instance,
	int WhichKind,
	int WhichSignature,
	int theStatus,
	void* theListOfIO);
extern "C" DECL_EXPORT void AIS_InteractiveContext_ObjectsInsideC8729CEC(
	void* instance,
	void* aListOfIO,
	int WhichKind,
	int WhichSignature);
extern "C" DECL_EXPORT int AIS_InteractiveContext_PurgeDisplay461FC46A(
	void* instance,
	bool CollectorToo);
extern "C" DECL_EXPORT void AIS_InteractiveContext_DisplayActiveAreas36A6FAB7(
	void* instance,
	void* aView);
extern "C" DECL_EXPORT void AIS_InteractiveContext_ClearActiveAreas36A6FAB7(
	void* instance,
	void* aView);
extern "C" DECL_EXPORT void AIS_InteractiveContext_DisplayActiveSensitive36A6FAB7(
	void* instance,
	void* aView);
extern "C" DECL_EXPORT void AIS_InteractiveContext_ClearActiveSensitive36A6FAB7(
	void* instance,
	void* aView);
extern "C" DECL_EXPORT void AIS_InteractiveContext_DisplayActiveSensitiveC47ED7A2(
	void* instance,
	void* anObject,
	void* aView);
extern "C" DECL_EXPORT void AIS_InteractiveContext_DisplayActiveAreasC47ED7A2(
	void* instance,
	void* anObject,
	void* aView);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_IsInLocal4F47E777(
	void* instance,
	void* anObject,
	int* TheIndex);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_IsCollectorClosed(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetAutoActivateSelection(void* instance, bool value);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_GetAutoActivateSelection(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetSensitivityMode(void* instance, int value);
extern "C" DECL_EXPORT int AIS_InteractiveContext_SensitivityMode(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetSensitivity(void* instance, double value);
extern "C" DECL_EXPORT double AIS_InteractiveContext_Sensitivity(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetPixelTolerance(void* instance, int value);
extern "C" DECL_EXPORT int AIS_InteractiveContext_PixelTolerance(void* instance);
extern "C" DECL_EXPORT int AIS_InteractiveContext_PreSelectionColor(void* instance);
extern "C" DECL_EXPORT int AIS_InteractiveContext_DefaultColor(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetHilightColor(void* instance, int value);
extern "C" DECL_EXPORT int AIS_InteractiveContext_HilightColor(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetPreselectionColor(void* instance, int value);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetSubIntensityColor(void* instance, int value);
extern "C" DECL_EXPORT int AIS_InteractiveContext_SubIntensityColor(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetHLRAngle(void* instance, double value);
extern "C" DECL_EXPORT double AIS_InteractiveContext_HLRAngle(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetHiddenLineAspect(void* instance, void* value);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_HiddenLineAspect(void* instance);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_DrawHiddenLine(void* instance);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_HasNextDetected(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetToHilightSelected(void* instance, bool value);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_ToHilightSelected(void* instance);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_WasCurrentTouched(void* instance);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_MoreCurrent(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_Current(void* instance);
extern "C" DECL_EXPORT int AIS_InteractiveContext_NbCurrents(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_FirstCurrentObject(void* instance);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_MoreSelected(void* instance);
extern "C" DECL_EXPORT int AIS_InteractiveContext_NbSelected(void* instance);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_HasSelectedShape(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_SelectedShape(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_SelectedOwner(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_Interactive(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_SelectedInteractive(void* instance);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_HasApplicative(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_Applicative(void* instance);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_HasDetected(void* instance);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_HasDetectedShape(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_DetectedShape(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_DetectedInteractive(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_DetectedOwner(void* instance);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_MoreDetected(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_DetectedCurrentShape(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_DetectedCurrentObject(void* instance);
extern "C" DECL_EXPORT int AIS_InteractiveContext_IndexOfCurrentLocal(void* instance);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_BeginImmediateDraw(void* instance);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_IsImmediateModeOn(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetAutomaticHilight(void* instance, bool value);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_AutomaticHilight(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetZDetection(void* instance, bool value);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_ZDetection(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_DefaultDrawer(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_CurrentViewer(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_Collector(void* instance);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_HasOpenedContext(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_CurrentName(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_SelectionName(void* instance);
extern "C" DECL_EXPORT Standard_CString AIS_InteractiveContext_DomainOfMainViewer(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_SelectionManager(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_MainPrsMgr(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_CollectorPrsMgr(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_MainSelector(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_LocalSelector(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_CollectorSelector(void* instance);
extern "C" DECL_EXPORT int AIS_InteractiveContext_HighestIndex(void* instance);
extern "C" DECL_EXPORT void AISInteractiveContext_Dtor(void* instance);