Lib/AlternateWrapper/NaroOccCore/NaroOccCore-build-desktop/Occ/AIS/AISInteractiveContext.cs

		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_DisplayedObjectsFB1E3476(IntPtr instance, IntPtr aListOfIO,bool OnlyFromNeutral);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_DisplayedObjects552A363C(IntPtr instance, int WhichKind,int WhichSignature,IntPtr aListOfIO,bool OnlyFromNeutral);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_ObjectsInCollector235DE22E(IntPtr instance, IntPtr aListOfIO);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_ObjectsInCollectorFB8692A(IntPtr instance, int WhichKind,int WhichSignature,IntPtr aListOfIO);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_ErasedObjects235DE22E(IntPtr instance, IntPtr theListOfIO);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_ErasedObjectsFB8692A(IntPtr instance, int WhichKind,int WhichSignature,IntPtr theListOfIO);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_ObjectsByDisplayStatusF86BDF5C(IntPtr instance, int theStatus,IntPtr theListOfIO);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_ObjectsByDisplayStatusB048A7AD(IntPtr instance, int WhichKind,int WhichSignature,int theStatus,IntPtr theListOfIO);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_ObjectsInsideC8729CEC(IntPtr instance, IntPtr aListOfIO,int WhichKind,int WhichSignature);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_PurgeDisplay461FC46A(IntPtr instance, bool CollectorToo);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_DisplayActiveAreas36A6FAB7(IntPtr instance, IntPtr aView);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_ClearActiveAreas36A6FAB7(IntPtr instance, IntPtr aView);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_DisplayActiveSensitive36A6FAB7(IntPtr instance, IntPtr aView);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_ClearActiveSensitive36A6FAB7(IntPtr instance, IntPtr aView);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_DisplayActiveSensitiveC47ED7A2(IntPtr instance, IntPtr anObject,IntPtr aView);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_DisplayActiveAreasC47ED7A2(IntPtr instance, IntPtr anObject,IntPtr aView);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_IsInLocal4F47E777(IntPtr instance, IntPtr anObject,ref int TheIndex);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_IsCollectorClosed(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetAutoActivateSelection(IntPtr instance, bool value);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_GetAutoActivateSelection(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetSensitivityMode(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_SensitivityMode(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetSensitivity(IntPtr instance, double value);
		[DllImport("NaroOccCore.dll")]
		private static extern double AIS_InteractiveContext_Sensitivity(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetPixelTolerance(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_PixelTolerance(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_PreSelectionColor(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_DefaultColor(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetHilightColor(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_HilightColor(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetPreselectionColor(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetSubIntensityColor(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_SubIntensityColor(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetHLRAngle(IntPtr instance, double value);
		[DllImport("NaroOccCore.dll")]
		private static extern double AIS_InteractiveContext_HLRAngle(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetHiddenLineAspect(IntPtr instance, IntPtr value);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_HiddenLineAspect(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_DrawHiddenLine(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_HasNextDetected(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetToHilightSelected(IntPtr instance, bool value);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_ToHilightSelected(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_WasCurrentTouched(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_MoreCurrent(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_Current(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_NbCurrents(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_FirstCurrentObject(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_MoreSelected(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_NbSelected(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_HasSelectedShape(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_SelectedShape(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_SelectedOwner(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_Interactive(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_SelectedInteractive(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_HasApplicative(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_Applicative(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_HasDetected(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_HasDetectedShape(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_DetectedShape(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_DetectedInteractive(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_DetectedOwner(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_MoreDetected(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_DetectedCurrentShape(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_DetectedCurrentObject(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_IndexOfCurrentLocal(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_BeginImmediateDraw(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_IsImmediateModeOn(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetAutomaticHilight(IntPtr instance, bool value);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_AutomaticHilight(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetZDetection(IntPtr instance, bool value);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_ZDetection(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_DefaultDrawer(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_CurrentViewer(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_Collector(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_HasOpenedContext(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_CurrentName(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_SelectionName(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern string AIS_InteractiveContext_DomainOfMainViewer(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_SelectionManager(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_MainPrsMgr(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_CollectorPrsMgr(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_MainSelector(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_LocalSelector(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_CollectorSelector(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_HighestIndex(IntPtr instance);

		#region NativeInstancePtr Convert constructor

		public AISInteractiveContext() { } 

		public AISInteractiveContext(IntPtr instance) : base(instance) { } 

		protected override void DeleteSelf()
		{
		    try
		    {
                AISInteractiveContext_Dtor(Instance);
		    }
		    catch (Exception)
		    {
		    }
		   
		}

		#endregion

		[DllImport("NaroOccCore.dll")]
		private static extern void AISInteractiveContext_Dtor(IntPtr instance);
	}
}
